# eventstreamd

./: .gitignore  .travis.yml  CHANGELOG.md  Dockerfile  MANIFEST.in  NEWS  NEWS.md  NEWS.rst  README.md  README.rst  docker.conf  pyproject.toml  requirements.txt  sample.conf  setup.cfg  setup.py  start.sh
.github/: dependabot.yml
.github/workflows/: test.yml
evtstrd/: __init__.py  auth.py  cmdargs.py  config.py  date.py  defs.py  dispatcher.py  events.py  exc.py  filters.py  http.py  http_server.py  listener.py  main.py  server.py  socket_server.py  stats.py  util.py
evtstrd/plugins/: README.md  __init__.py  example_auth.py
evtstrd_test/: date.py  events.py  filter.py  server.py
