[project]
name = "eventstreamd"
version = "2025.10.1.dev"
description = "Simple Event Stream Server"
readme = "README.md"
authors = [{ name = "Sebastian Rittau", email = "srittau@rittau.biz" }]
license = "MIT"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Topic :: Internet :: WWW/HTTP",
]
requires-python = ">= 3.10"
dependencies = ["json-get >= 1.1.1, < 2"]

[project.scripts]
eventstreamd = "evtstrd.main:main"

[project.urls]
homepage = "https://github.com/srittau/eventstreamd"
repository = "https://github.com/srittau/eventstreamd"

[dependency-groups]
dev = [
    "asserts >= 0.6, < 0.14",
    "mypy ~= 1.18.0",
    "poethepoet >= 0.22.0",
    "pytest >= 9.0.0",
    "ruff ~= 0.14.0",
]

[tool.poetry]
packages = [{ include = "evtstrd" }, { include = "evtstrd_test" }]

[tool.ruff]
line-length = 79
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "B", "I"]

[tool.pytest]
python_files = ["evtstrd_test/*.py"]

[tool.poe.tasks]
lint = "ruff check"
typecheck = "mypy evtstrd evtstrd_test"
test = "pytest"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
