[project]
name = "eventstreamd"
version = "2026.4.1.dev"
description = "Simple Event Stream Server"
readme = "README.md"
authors = [{ name = "Sebastian Rittau", email = "sebastian.rittau@zfutura.de" }]
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Topic :: Internet :: WWW/HTTP",
]
requires-python = ">= 3.11"
dependencies = ["json-get >= 1.1.1, < 2"]

[project.scripts]
eventstreamd = "evtstrd.main:main"

[project.urls]
homepage = "https://github.com/srittau/eventstreamd"
repository = "https://github.com/srittau/eventstreamd"

[dependency-groups]
dev = [
    "asserts ~= 0.14.0",
    "mypy ~= 2.1.0",
    "poethepoet >= 0.44.0",
    "pytest >= 9.0.3",
    "ruff ~= 0.15.10",
]

[tool.uv.build-backend]
module-root = ""
module-name = "evtstrd"
source-include = ["evtstrd_test/**/*.py"]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = ["E", "F", "B", "I"]

[tool.pytest]
python_files = ["evtstrd_test/*.py"]

[tool.mypy]
disallow_any_decorated = true
disallow_any_generics = true
disallow_any_unimported = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
no_implicit_reexport = true
strict_equality = true
strict_equality_for_none = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_ignores = true
warn_unused_configs = true

[tool.poe.tasks]
lint = "ruff check"
typecheck = "mypy evtstrd evtstrd_test"
test = "pytest"
build-docker-image = "docker build -t srittau/eventstreamd:latest ."

[build-system]
requires = ["uv_build ~= 0.11.6"]
build-backend = "uv_build"
